# CT-Recon

./: .gitignore  CMakeLists.txt
BackprojectionFDK/: CMakeLists.txt  convert.h  ct_recon_export.h  errorHandler.cu  graphicCardProp.cu  main.cpp  parameter.cpp  parameter.h  reader.cpp  reader.h  recon.cu  recon.h  reconFDK_kernel.cuh  src.cmake  typesFDK.h  utils.cpp  utils.h
test/: CMakeLists.txt  PhaseStepMain.cpp  parameters.txt  test_fdk.cpp
